# app/Models/Area/Activity.php
@@ -2,6 +2,7 @@
 
 namespace App\Models\Area;
 
+use App\Models\Accounting\TrainerAccount;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
@@ -19,6 +20,29 @@ class Activity extends Model
         'start',
         'end',
         'status',
-        'activity_id' => 'activityId',
+        'area_id',
+        'account_id',
+        'group_id',
+        'category_id'
     ];
+
+    public function group()
+    {
+        return $this->belongsTo(Group::class);
+    }
+
+    public function category()
+    {
+        return $this->belongsTo(ActivityCategory::class, 'category_id');
+    }
+
+    public function account()
+    {
+        return $this->belongsTo(TrainerAccount::class);
+    }
+
+    public function area()
+    {
+        return $this->belongsTo(Area::class);
+    }
 }
